<resources>
    <string name="app_name">Contacts</string>
    <string name="fab_content_desc">add contact</string>
    <string name="contacts_list_title">Contacts</string>
    <string name="create_contact_title">Create contact</string>
    <string name="save_button">Save</string>
    <string name="return_button">Return</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
</resources>